# tg-url-anti-track

./: .gitignore  LICENSE  README.md  config.toml  config.toml.example  main.py  pyproject.toml  requirements.txt  rules.toml
scripts/: bilibili.py
tg_url_anti_track/: __main__.py
tg_url_anti_track/scripts/: bilibili.py
