[tool.poetry]
name = "tg-url-anti-track"
version = "0.1.0"
description = ""
authors = ["poly000 <1348292515@qq.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
python-telegram-bot = "^20.2"
toml = "^0.10.2"
abv-py = "0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
